feat: Added rcp, rdr and rename commands to swagger, openapi.
